src/tools/moc/generator.h
@@ -40,6 +40,8 @@ private:
     void generateStaticMetacall();
     void generateSignal(const FunctionDef *def, int index);
     void generatePluginMetaData();
+    QByteArray disambiguatedTypeName(const QByteArray &name);
+    QByteArray disambiguatedTypeNameForCast(const QByteArray &name);
     QMultiMap<QByteArray, int> automaticPropertyMetaTypesHelper();
     QMap<int, QMultiMap<QByteArray, int>>
     methodsWithAutomaticTypesHelper(const QList<FunctionDef> &methodList);
