src/tools/moc/moc.h
@@ -66,7 +66,6 @@ struct ArgumentDef
     ArgumentDef() : isDefault(false) {}
     Type type;
     QByteArray rightType, normalizedType, name;
-    QByteArray typeNameForCast; // type name to be used in cast from void * in metacall
     bool isDefault;
 
     QJsonObject toJson() const;
@@ -198,6 +197,7 @@ struct ClassDef : BaseDef {
     QList<FunctionDef> signalList, slotList, methodList, publicList;
     QList<QByteArray> nonClassSignalList;
     QList<PropertyDef> propertyList;
+    QSet<QByteArray> allEnumNames;
     int revisionedMethods = 0;
 
     bool hasQObject = false;
@@ -260,7 +260,7 @@ public:
 
     Type parseType();
 
-    bool parseEnum(EnumDef *def);
+    bool parseEnum(EnumDef *def, ClassDef *containingClass);
 
     bool parseFunction(FunctionDef *def, bool inMacro = false);
     bool parseMaybeFunction(const ClassDef *cdef, FunctionDef *def);
